--- a/index.html
+++ b/index.html
@@ -5,31 +5,32 @@
   <title>Online Marketplace</title>
   <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
-</head>
+</head> 
 
 <body>
   <div class="container">
     <h1 class="display-4">Online Marketplace</h1>
-    <h3>Your shopping cart has <span id="itemNo">0</span> items. <button id="showCartBtn" class="btn btn-success">Cart</button></h3>
+    <h3>Your shopping cart has <span id="itemNo">0</span> items. 
+      <button id="showCartBtn" class="btn btn-success">Show Cart</button></h3>
     <hr class="my-4">
 <!-- Products section -->
-    <div id="products" class="jumbotron">
-      <h2>Products</h2>
-      <hr class="my-4">
-      <div class="row">
-        <!-- Sample product card -->
-        <div class="col-md-4">
-          <div class="card">
-            <img class="card-img-top" src="https://s3.amazonaws.com/mernbook/marketplace/tardis.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Tardis Figurine</h5>
-              <p class="card-text">$ 14</p>
-              <button class="btn btn-primary">Add to Cart</button>
-            </div>
-          </div>
+<div id="products" class="jumbotron">
+  <h2>Products</h2>
+  <hr class="my-4">
+  <div class="row">
+    <!-- Sample product card -->
+    <div class="col-md-4">
+      <div class="card">
+        <img class="card-img-top" src="https://s3.amazonaws.com/mernbook/marketplace/tardis.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Tardis Figurine</h5>
+          <p class="card-text">$ 14</p>
+          <button class="btn btn-primary">Add to Cart</button>
         </div>
       </div>
     </div>
+  </div>
+</div>
 <!-- Cart section -->
     <div id="cart" class="jumbotron">
       <h2>Cart</h2>
