--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <div class="container">
     <h1 class="display-4">Online Marketplace</h1>
     <h3>Your shopping cart has <span id="itemNo">0</span> items. 
-      <button id="showCartBtn" class="btn btn-success">Show Cart</button></h3>
+      <button onclick="showCart(event)" id="showCartBtn" class="btn btn-success">Show Cart</button></h3>
     <hr class="my-4">
 <!-- Products section -->
 <div id="products" class="jumbotron">
   <h2>Products</h2>
   <hr class="my-4">
-  <div class="row">
-    <!-- Sample product card -->
+  <div class="row" id="productRow">
+    <!-- Sample product card 
     <div class="col-md-4">
       <div class="card">
         <img class="card-img-top" src="https://s3.amazonaws.com/mernbook/marketplace/tardis.png" alt="Card image cap">
@@ -28,16 +28,16 @@
           <button class="btn btn-primary">Add to Cart</button>
         </div>
       </div>
-    </div>
+    </div>-->
   </div>
 </div>
 <!-- Cart section -->
     <div id="cart" class="jumbotron">
       <h2>Cart</h2>
-      <button class="btn btn-dark btn-sm">Close</button>
+      <button onclick="showProduct(event)" class="btn btn-dark btn-sm">Close</button>
       <hr class="my-4">
-      <div class="row">
-        <!-- Sample cart item -->
+      <div class="row" id = "cartRow">
+        <!-- Sample cart item 
         <div class="col-md-4">
           <div class="card">
             <img class="card-img-top" src="https://s3.amazonaws.com/mernbook/marketplace/tardis.png" alt="Card image cap">
@@ -46,7 +46,7 @@
               <p class="card-text">$ 14 x <input type="number" min="0"></p>
             </div>
           </div>
-        </div>
+        </div>-->
       </div>
       <hr class="my-4">
       <h4>Total: <span id="total"></span></h4>
